Bug 442554 layout.word_select.eat_space_to_next_word should not change word selection method r+sr=roc